--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,8 @@
   height: 100vh;
   background: #c7991c;
   color: #4e8cff98;
+  color: #4e8cff;
   color: rgba(128, 128, 128, 0.74);
+  color: #003;
   background: #c7991c77;
 }
