--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -9,7 +9,8 @@
   align-items: center;
   position: relative;
   overflow: hidden;
-  background: #c7991c77;
+  /* background: #c7991c77; */
+  background: transparent;
 }
 .slider i {
   font-size: 2vw;
